<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#071216" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="18dp"
                android:layout_marginLeft="14dp"
                android:contentDescription="@null"
                android:src="@drawable/back_icon" />
        </LinearLayout>

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/actionbar_logo" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:background="#80071216" >

                    <TextView
                        android:id="@+id/profilename"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profiletype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/profilename"
                        android:layout_below="@+id/profilename"
                        android:textColor="#0491bf"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/emailbutton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="7dp"
                        android:contentDescription="@null"
                        android:src="@drawable/email_icon" />

                    <ImageView
                        android:id="@+id/smsbutton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/emailbutton"
                        android:contentDescription="@null"
                        android:src="@drawable/sms_icon" />
                    
                    <ImageView
                        android:id="@+id/callbutton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/smsbutton"
                        android:contentDescription="@null"
                        android:src="@drawable/call_icon" />
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0490c0"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/info_member"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <!-- Facultate -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/university"
                android:textColor="#0490c0"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/university"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:textColor="#071216"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:background="#f2f2f2" />
            
            <!-- Despartament -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/college"
                android:textColor="#0490c0"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/college"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:textColor="#071216"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:background="#f2f2f2" />
            
            <!-- Specializare -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/department"
                android:textColor="#0490c0"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:textColor="#071216"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:background="#f2f2f2" />
            
            <!-- Email -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/email"
                android:textColor="#0490c0"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:textColor="#071216"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:background="#f2f2f2" />
            
            <!-- Telefon -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/phone"
                android:textColor="#0490c0"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:textColor="#071216"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:background="#f2f2f2" />
            
            <!-- Adresa -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/adress"
                android:textColor="#0490c0"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:textColor="#071216"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:background="#f2f2f2" />
            
            <!-- Data nasterii -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/birthday"
                android:textColor="#0490c0"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:textColor="#071216"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>